force-app/main/default/objects/Apttus__QueryTemplateFilter__c/fields/Apttus__CompOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CompOper__c</fullName>
    <description>Comparison operator for a field expression in a query</description>
    <label>Comparison Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equal to</fullName>
                <default>true</default>
                <label>equal to</label>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less than or equal to</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater than or equal to</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
            <value>
                <fullName>like</fullName>
            </value>
            <value>
                <fullName>not like</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>