force-app/main/default/objects/Apttus__QueryTemplateFilter__c/fields/Apttus__QueryTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__QueryTemplate__c</fullName>
    <description>The associated query template</description>
    <inlineHelpText>The associated query template</inlineHelpText>
    <label>Query Template</label>
    <referenceTo>Apttus__QueryTemplate__c</referenceTo>
    <relationshipLabel>Filters</relationshipLabel>
    <relationshipName>QueryTemplateFilters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>