force-app/main/default/objects/Apttus__QueryTemplateFilter__c/fields/Apttus__Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Value__c</fullName>
    <description>A value used to compare with the value in field in a query</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>